--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.backgroundImage{
+  background:url('/bg.jpg');
+  background-size: cover;  
+  width: 100%;              
+}
+
+.text-shadow {
+  text-shadow: 2px 2px 8px rgba(12, 1, 1, 0.8);
+}
+
